--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
     "react": "18.2.0",
     "react-native": "0.71.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.2",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.19.0"
+    "react-native-screens": "^3.19.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -27,6 +29,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
